<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPG Dicer</string>
    <string name="settingsTitle">Settings</string>
    <string name="action_about">About</string>
    <string name="diceNumbers">Dices Number</string>
    <string name="generateBtn">Generate</string>
    <string name="result"></string>
    <string name="Sucess"></string>
    <string name="Critical"></string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    
    <string name="pref_fail_title">Fail</string>
    <string name="pref_fail_summary">Set the MAX value to be a Fail</string>
    <string name="pref_fail_default">1</string>
    
    <string name="pref_success_title">Success</string>
    <string name="pref_success_summary">Set the MIN value to be a Success</string>
    <string name="pref_success_default">8</string>    
    
    <string name="aboutText">
    Rpg Dicer - Simple D10 RPG Roller
    \n\n    
    Assignment 1 for the Illinois Creative, Serious and Playful Science of Android Apps Course
    \n\n    
    How it Works:
    \n
    For Default, Faces 8 / 9 or 10 = Success
    \n
    For Default Face 1 = Critical Failure
    \n
    You Can Configure the Default Values in the Settings Option     
    </string>

    
<string-array name="array" >
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>  
    
<string-array name="arrayFail" >
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
 </string-array> 
    
<string-array name="arraySuccess" >
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
 </string-array>
 
</resources>
