<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Launcher" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"        
        android:padding="8dp"
        android:layout_alignParentLeft="true"
        android:text="@string/diceNumbers" />
    
    <Spinner
        android:id="@+id/spinner1"
        android:entries="@array/array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_toRightOf="@id/textView1"
        android:padding="8dp"
        />    
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/spinner1"
        android:padding="8dp"
        android:onClick="generate"
        android:text="@string/generateBtn" />
    
    
    <ScrollView 
	 	android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignLeft="@+id/textView1"
	    android:layout_below="@+id/spinner1">
    
    <RelativeLayout
        android:id="@+id/resultLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
               
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:id="@+id/resultText"
            android:textSize="17sp"
            android:padding="8dp"
            android:layout_marginTop="10sp"
            android:text="@string/result"/>
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:id="@+id/sucess"
            android:textSize="17sp"
            android:padding="8dp"
            android:layout_marginTop="10sp"
            android:layout_below="@+id/resultText"
            android:text="@string/Sucess"/>
        
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:id="@+id/critical"
            android:textSize="17sp"
            android:padding="8dp"
            android:layout_marginTop="10sp"
            android:layout_below="@+id/sucess"
            android:text="@string/Critical"/>  
        
    </RelativeLayout>
    </ScrollView>
    
</RelativeLayout>